--- a/StoredProcedure/pom.xml
+++ b/StoredProcedure/pom.xml
@@ -8,24 +8,29 @@
 		<version>3.2.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.learning.jpa</groupId>
-	<artifactId>jpa</artifactId>
+	<groupId>com.learning.sp</groupId>
+	<artifactId>StoredProcedure</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <name>jpa</name>
-	<description>JPA project for Spring Boot</description>
-    <modules>
-		<module>StoredProcedure</module>
-	</modules>
-    <properties>
+	<name>StoredProcedure</name>
+	<description>Stored Procedure project for Spring Boot</description>
+	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
