--- a/StoredProcedure/src/main/resources/application.properties
+++ b/StoredProcedure/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 
 server.port = 8081
+
+spring.datasource.url=jdbc:mysql://localhost:3306/sp
+spring.datasource.username=root
+spring.datasource.password=Shiva@11
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
