--- a/TransactionManagement/pom.xml
+++ b/TransactionManagement/pom.xml
@@ -5,27 +5,31 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.3</version>
+		<version>3.2.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.learning.jpa</groupId>
-	<artifactId>jpa</artifactId>
+	<groupId>com.learning.transaction</groupId>
+	<artifactId>TransactionManagement</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <name>jpa</name>
-	<description>JPA project for Spring Boot</description>
-    <modules>
-		<module>StoredProcedure</module>
-		<module>Pagination</module>
-		<module>TransactionManagement</module>
-	</modules>
-    <properties>
+	<name>TransactionManagement</name>
+	<description>TransactionManagement project for Spring Boot</description>
+	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
