--- a/StoredProcedure/src/main/resources/application.properties
+++ b/StoredProcedure/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 
 server.port = 8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sp
+#db specific properties
 spring.datasource.username=root
-spring.datasource.password=Shiva@11
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://localhost:3306/sp
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+
+#ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
