--- a/Pagination/src/main/resources/application.properties
+++ b/Pagination/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+
+spring.application.name=Pagination
+
+server.port=8082
+
+#db specific properties
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://localhost:3306/pagination
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+
+#ORM s/w specific properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
